[workspace]
members = ["svm-featues", "syscalls"]

resolver = "3"

[workspace.package]
version = "0.1.0"
authors = ["448-OG <superuser@448.africa>"]
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
agave-feature-set = "2.3.6"
# solana-sbpf = "0.12.0"
solana-compute-budget = "2.3.6"
solana-bpf-loader-program = "2.3.6"
solana-program-runtime = { version = "2.3.6", features = [
    "dev-context-only-utils",
] }
